# Card_Game_66

./: .gitignore  CMakeLists.txt  CardViewer.cpp  README.md  Toolchain_Windows.cmake  main.cpp
include/: CalculateHandPointsState.hpp  Card.hpp  CardFactory.hpp  Deck.hpp  Game.hpp  GameOverState.hpp  GameState.hpp  ICard.hpp  PlayHandState.hpp  Player.hpp  ShuffleAndDrawState.hpp  StartState.hpp  StateCalculateHandPoints.hpp  StateGame.hpp  StateGameOver.hpp  StatePlayHand.hpp  StateShuffleAndDraw.hpp  StateStart.hpp  SuitAndRank.hpp  SuiteAndRank.hpp
resources/: Clasic_Cards.xml  Magyar_Cards.xml  Visual_cards.xml
src/: CalculateHandPointsState.cpp  Card.cpp  CardFactory.cpp  Deck.cpp  Game.cpp  GameOverState.cpp  PlayHandState.cpp  Player.cpp  ShuffleAndDrawState.cpp  StartState.cpp  StateCalculateHandPoints.cpp  StateGameOver.cpp  StatePlayHand.cpp  StateShuffleAndDraw.cpp  StateStart.cpp
